# bentoml-locust-quickstart

./: README.md  locustfile.py  pyproject.toml  service.py
