[project]
name = "quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bentoml>=1.3.2",
    "torch>=2.4.0",
    "transformers>=4.44.0",
    "locust>=2.31.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
exclude = [
  ".venv",
]
venvPath = "."
venv = ".venv"
